# ecc_toolkit

./: CMakeLists.txt  command.txt  run_test.sh
include/: curve_generator.h  montgomery_curve.h  parameter_validator.h  types.h
include/math/: prime_utils.h
src/core/: curve_generator.cpp  montgomery_curve.cpp  parameter_validator.cpp
src/math/: prime_utils.cpp
tests/: test_generator.cpp  test_gmp.cpp  test_gmp.h  test_montgomery.cpp  test_order_validation.cpp  test_validator.cpp
